starting jquery.comet.*.js 	new file:   etc/httpd/conf.d/vhosts/backgammonbase.test/src.conf 	modified:   etc/httpd/conf/httpd.conf 	modified:   memo.txt 	new file:   src/jquery.comet.chat.js 	new file:   src/jquery.comet.hub.js 	new file:   tests/jquery.comet.chat.html

--- a/etc/httpd/conf/httpd.conf
+++ b/etc/httpd/conf/httpd.conf
@@ -98,7 +98,7 @@ Include conf.d/sorry.conf
 
 Include conf.d/vhosts/backgammonbase.test/www.conf
 Include conf.d/vhosts/backgammonbase.test/comet.conf
-
+Include conf.d/vhosts/backgammonbase.test/src.conf
 
 
 
