tempolary commit before adding session. - comet jquery library is on going. - implementing channel 	modified:   etc/httpd/conf.d/vhosts/backgammonbase.test/comet.conf 	modified:   memo.txt 	modified:   src/cometd.py 	modified:   src/jquery.comet.hub.js 	modified:   src/move.py 	modified:   tests/jquery.comet.chat.html

--- a/etc/httpd/conf.d/vhosts/backgammonbase.test/comet.conf
+++ b/etc/httpd/conf.d/vhosts/backgammonbase.test/comet.conf
@@ -13,9 +13,20 @@
     ProxyPass /error/ !
     ProxyPass /icons/ !
     ProxyPass /favicon.ico !
-    #ProxyPass /html/ http://www.backgammonbase.test:8080/
-    ProxyPass /publish http://127.0.0.1:3124/  smax=5 max=20 ttl=120 retry=300
-    ProxyPassReverse /publish http://127.0.0.1:3124/
+    ProxyPass /html !
+    #ProxyPass /publish http://127.0.0.1:3124/  smax=5 max=20 ttl=120 retry=300
+    #ProxyPass /?action=subscribe http://127.0.0.1:3124/?action=subscribe  smax=5 max=20 ttl=120 retry=300
+    #ProxyPassReverse /publish http://127.0.0.1:3124/
+
+    RewriteEngine On
+    #RewriteRule ^/(.*(action=publish)|(action=subscribe).*)$ http://127.0.0.1:3124/$1 [P]
+    #RewriteRule ^/(\?action=subscribe)$ http://127.0.0.1:3124/$1 [P] 
+    #RewriteRule ^/(.*action=subscribe) http://127.0.0.1:3124/$1 [P] 
+    #RewriteRule ^/\?action=subscribe http://127.0.0.1:3124/\?action=subscribe [P] 
+    #RewriteCond / !-f
+    RewriteCond %{REQUEST_METHOD} =POST
+    RewriteRule (.+) http://127.0.0.1:3124/$1 [P]
+    ProxyPassReverse / http://127.0.0.1:3124/
     <Location />
         Order allow,deny
         Order deny,allow
